Add I18N management : - Make statistics display easier - Create error codes and refactor error management in app